feat: Create endpoint to retrieve short URL
