# api-doc.yml
@@ -22,8 +22,113 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/JsonApiResponse_ShortUrlResource_"
+  /api/v1/shortened-urls/{shortUri}:
+    get:
+      operationId: show
+      parameters:
+      - name: shortUri
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: show 200 response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/JsonApiResponse_ShortUrlResource_"
 components:
   schemas:
+    Error:
+      required:
+      - code
+      - status
+      - title
+      type: object
+      properties:
+        status:
+          $ref: "#/components/schemas/HttpStatus"
+        code:
+          type: integer
+          format: int32
+        title:
+          type: string
+        detail:
+          type: string
+          nullable: true
+    HttpStatus:
+      type: string
+      enum:
+      - CONTINUE
+      - SWITCHING_PROTOCOLS
+      - PROCESSING
+      - EARLY_HINTS
+      - OK
+      - CREATED
+      - ACCEPTED
+      - NON_AUTHORITATIVE_INFORMATION
+      - NO_CONTENT
+      - RESET_CONTENT
+      - PARTIAL_CONTENT
+      - MULTI_STATUS
+      - ALREADY_IMPORTED
+      - IM_USED
+      - MULTIPLE_CHOICES
+      - MOVED_PERMANENTLY
+      - FOUND
+      - SEE_OTHER
+      - NOT_MODIFIED
+      - USE_PROXY
+      - SWITCH_PROXY
+      - TEMPORARY_REDIRECT
+      - PERMANENT_REDIRECT
+      - BAD_REQUEST
+      - UNAUTHORIZED
+      - PAYMENT_REQUIRED
+      - FORBIDDEN
+      - NOT_FOUND
+      - METHOD_NOT_ALLOWED
+      - NOT_ACCEPTABLE
+      - PROXY_AUTHENTICATION_REQUIRED
+      - REQUEST_TIMEOUT
+      - CONFLICT
+      - GONE
+      - LENGTH_REQUIRED
+      - PRECONDITION_FAILED
+      - REQUEST_ENTITY_TOO_LARGE
+      - REQUEST_URI_TOO_LONG
+      - UNSUPPORTED_MEDIA_TYPE
+      - REQUESTED_RANGE_NOT_SATISFIABLE
+      - EXPECTATION_FAILED
+      - I_AM_A_TEAPOT
+      - ENHANCE_YOUR_CALM
+      - MISDIRECTED_REQUEST
+      - UNPROCESSABLE_ENTITY
+      - LOCKED
+      - FAILED_DEPENDENCY
+      - TOO_EARLY
+      - UPGRADE_REQUIRED
+      - PRECONDITION_REQUIRED
+      - TOO_MANY_REQUESTS
+      - REQUEST_HEADER_FIELDS_TOO_LARGE
+      - NO_RESPONSE
+      - BLOCKED_BY_WINDOWS_PARENTAL_CONTROLS
+      - UNAVAILABLE_FOR_LEGAL_REASONS
+      - REQUEST_HEADER_TOO_LARGE
+      - INTERNAL_SERVER_ERROR
+      - NOT_IMPLEMENTED
+      - BAD_GATEWAY
+      - SERVICE_UNAVAILABLE
+      - GATEWAY_TIMEOUT
+      - HTTP_VERSION_NOT_SUPPORTED
+      - VARIANT_ALSO_NEGOTIATES
+      - INSUFFICIENT_STORAGE
+      - LOOP_DETECTED
+      - BANDWIDTH_LIMIT_EXCEEDED
+      - NOT_EXTENDED
+      - NETWORK_AUTHENTICATION_REQUIRED
+      - CONNECTION_TIMED_OUT
     JsonApiResponse_ShortUrlResource_:
       required:
       - data
@@ -39,6 +144,11 @@ components:
           nullable: true
           allOf:
           - $ref: "#/components/schemas/Links"
+        errors:
+          type: array
+          nullable: true
+          items:
+            $ref: "#/components/schemas/Error"
     LinkObject:
       required:
       - href
