# src/main/kotlin/com/mithredate/http/response/Response.kt
@@ -1,6 +1,7 @@
 package com.mithredate.http.response
 
 import io.micronaut.core.annotation.Introspected
+import io.micronaut.http.HttpStatus
 import io.micronaut.serde.annotation.Serdeable
 
 @Introspected
@@ -9,6 +10,16 @@ data class JsonApiResponse<T>(
     val data: T,
     val meta: Meta? = null,
     val links: Links? = null,
+    val errors: List<Error>? = null,
+)
+
+@Introspected
+@Serdeable
+data class Error(
+    val status: HttpStatus,
+    val code: Int,
+    val title: String,
+    val detail: String? = null,
 )
 
 @Introspected
